webhook-server/rendered/Charts/templates/manifest-integrity/deployment.yaml
# Source: Charts/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-integrity-and-misconfiguration-validation-webhhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-integrity-and-misconfiguration-validation-webhhook
  template:
    metadata:
      labels:
        app: app-integrity-and-misconfiguration-validation-webhhook
    spec:
      containers:
        - image: kensenh/simple-kubernetes-webhook:manifest-integrityv0.0.1
          name: app-integrity-and-misconfiguration-validation-webhhook
          imagePullPolicy: Always
          volumeMounts:
            - name: tls
              mountPath: "/etc/admission-webhook/tls"
            - name: credential
              mountPath: "/etc/admission-webhook/credential"
      volumes:
        - name: tls
          secret:
            secretName: webhook-tls
        - name: credential
          secret:
            secretName: gcp
